--- a/index.html
+++ b/index.html
@@ -254,6 +254,12 @@
                             >Hawaii Project</a
                         >
                     </li>
+                    <li><a href="MyStore/index.html">Suit Shop</a></li>
+                    <li>
+                        <a href="./Choose Restaurant/index.html"
+                            >ChooseRestaurant</a
+                        >
+                    </li>
                 </ul>
             </nav>
         </header>
