Todo Lsit project

--- a/Choose Restaurant/index.html
+++ b/Choose Restaurant/index.html
@@ -35,7 +35,7 @@
                     id="restaurant-list"
                 ></ul>
                 <!-- Trigger/Open The Modal -->
-                <button id="myBtn">Open Modal</button>
+                <button id="myBtn">抽籤</button>
 
                 <!-- The Modal -->
                 <div id="myModal" class="modal">
