--- a/resume.html
+++ b/resume.html
@@ -37,14 +37,22 @@
                     </li>
                     <li><a href="contact.html">聯絡方式</a></li>
                     <li>
-                        <a href="./Taiwan Project/index.html"
-                            >Taiwan Project</a
-                        >
-                    </li>
-                    <li>
-                        <a href="./Hawaii Project/index.html"
-                            >Hawaii Project</a
-                        >
+                        <div class="dropdown">
+                            作品集
+                            <div class="dropdown-content">
+                                <a href="./Taiwan Project/index.html"
+                                    >Taiwan Project</a
+                                >
+                                <a href="./Hawaii Project/index.html"
+                                    >Hawaii Project</a
+                                >
+                                <a href="./Choose Restaurant/index.html"
+                                    >Choose Restaurant</a
+                                >
+                                <a href="./Todo List/">Todo List</a>
+                                <a href="MyStore/index.html">Suit Shop</a>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </nav>
@@ -145,19 +153,19 @@
             </section>
         </main>
         <footer>
-            <a href="#"
+            <a href="https://www.facebook.com/wu.j.kuan.1"
                 ><img
                     src="./ICONS/facebook.svg"
                     alt="facebook"
                     title="facebook page"
             /></a>
-            <a href="#"
+            <a href="https://www.instagram.com/rocky_wide"
                 ><img
                     src="./ICONS/instagram.svg"
                     alt="instagram"
                     title="instagram page"
             /></a>
-            <a href="#"
+            <a href="https://github.com/WuRocky/myProject"
                 ><img
                     src="./ICONS/github-brands 1.svg"
                     alt="github"
