--- a/Hawaii Project/index.html
+++ b/Hawaii Project/index.html
@@ -39,9 +39,9 @@
             <nav>
                 <ul>
                     <li><a href="#">首頁</a></li>
-                    <li><a href="#">關於我們</a></li>
-                    <li><a href="#">會員登入</a></li>
-                    <li><a href="#">聯絡我們</a></li>
+                    <li><a href="#">關於我們(施工中)</a></li>
+                    <li><a href="#">會員登入(施工中)</a></li>
+                    <li><a href="#">聯絡我們(施工中)</a></li>
                 </ul>
             </nav>
         </header>
