--- a/Taiwan Project/index.html
+++ b/Taiwan Project/index.html
@@ -83,23 +83,24 @@
                     >
                 </li>
                 <li>
-                    <a href="./second.html"
-                        ><i class="twicon-l-wemo"></i> 農業改革</a
+                    <a href="#"
+                        ><i class="twicon-l-wemo"></i> 農業改革(施工中)</a
                     >
                 </li>
                 <li>
-                    <a href="./third.html"
-                        ><i class="twicon-fb-stn"></i> 工業改革</a
+                    <a href="#"
+                        ><i class="twicon-fb-stn"></i> 工業改革(施工中)</a
                     >
                 </li>
                 <li>
-                    <a href="./fourth.html"
-                        ><i class="twicon-taipei101"></i> 經濟起飛</a
+                    <a href="#"
+                        ><i class="twicon-taipei101"></i>
+                        經濟起飛(施工中)</a
                     >
                 </li>
                 <li>
-                    <a href="./fifth.html"
-                        ><i class="twicon-red-man"></i> 關於作者</a
+                    <a href="#"
+                        ><i class="twicon-red-man"></i> 關於作者(施工中)</a
                     >
                 </li>
             </ul>
