--- a/Taiwan Project/farming.html
+++ b/Taiwan Project/farming.html
@@ -38,9 +38,7 @@
 					<a class="active" href="#"><i class="twicon-l-wemo"></i> 農業改革</a>
 				</li>
 				<li>
-					<a href="./industrial.html"
-						><i class="twicon-fb-stn"></i> 工業改革(施工中)</a
-					>
+					<a href="./industrial.html"><i class="twicon-fb-stn"></i> 工業改革</a>
 				</li>
 				<li>
 					<a href="#"><i class="twicon-taipei101"></i> 經濟起飛(施工中)</a>
