--- a/Taiwan Project/industrial.html
+++ b/Taiwan Project/industrial.html
@@ -38,9 +38,7 @@
 					<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
 				</li>
 				<li>
-					<a class="active" href="#"
-						><i class="twicon-fb-stn"></i> 工業改革(施工中)</a
-					>
+					<a class="active" href="#"><i class="twicon-fb-stn"></i> 工業改革</a>
 				</li>
 				<li>
 					<a href="#"><i class="twicon-taipei101"></i> 經濟起飛(施工中)</a>
@@ -50,5 +48,55 @@
 				</li>
 			</ul>
 		</nav>
+		<main>
+			<section class="industrial">
+				<h2>台灣工業發展</h2>
+				<hr />
+				<div class="imgPicture">
+					<p>
+						<img class="pocture1" src="./picture/sailing.png" alt="sailing" />
+						航海時代
+					</p>
+					<img class="pocture1" src="./picture/arrow.png" alt="arrow" />
+					<p>
+						<img class="pocture1" src="./picture/tractor.png" alt="tractor" />
+						農業改革
+					</p>
+					<img class="pocture1" src="./picture/arrow.png" alt="arrow" />
+					<p>
+						<img class="pocture1" src="./picture/factory.png" alt="factory" />
+						工業改革
+					</p>
+					<img class="pocture1" src="./picture/arrow.png" alt="arrow" />
+					<p>
+						<img class="pocture1" src="./picture/internet.png" alt="internet" />
+						網路時代
+					</p>
+				</div>
+
+				<p>
+					台灣經濟史的記載與發展起自大航海時代。
+					17世紀起，台灣即因為優越戰略地點，成為西歐海權國家競相角逐的場所，不久更成為西方國家對中國、日本、南洋等地的經貿轉繼站。1630年－1945年年間，歷經臺灣荷西統治時期、明鄭時期、清治時期、日治時期的臺灣歷史，實以經濟為主軸，而該經貿經濟活動，也與台灣農業經濟有密切結合與關係。
+					另外，也涉及台灣較為特殊的土地經濟活動、地租關係。
+					經過1950年代，因國共內戰因素，從中國大陸遷徙至台灣的中華民國政府對台灣實施資本節制的土地經濟政策。在政府的適度干預與計劃下，1960年代確認的客廳即工廠經濟政策，締造了以中小企業為主的經濟方向與理念，農業出產與貿易結合的生產型態被輕工業取代。
+					從1966年－1980年，台灣財政漸趨穩健，加工出口區、十大建設、十二大建設奠定經濟快速發展的礎石。
+					1980年代後，政府主管投資和逐漸減少的國外投資引導的動態的資本主義經濟體，成為台灣經濟的主軸。中華民國政府於經濟中的角色越來越小，很多大型的國有銀行及企業逐漸私有化，這些政策，讓台灣在1975年後，平均年均經濟增長達到8%，並以出口導向獲得的資金，做為台灣工業化的保證。
+				</p>
+
+				<ul>
+					<li>
+						<a href="https://ic.tpex.org.tw/introduce.php?ic=D000"
+							>台灣半導體產業</a
+						>
+					</li>
+					<li>
+						<a
+							href="https://www.bnext.com.tw/article/58060/semiconductor-industry"
+							>半導體未來十年</a
+						>
+					</li>
+				</ul>
+			</section>
+		</main>
 	</body>
 </html>
