--- a/Taiwan Project/index.html
+++ b/Taiwan Project/index.html
@@ -45,10 +45,10 @@
 					<a href="./industrial.html"><i class="twicon-fb-stn"></i> 工業改革</a>
 				</li>
 				<li>
-					<a href="#"><i class="twicon-taipei101"></i> 經濟起飛(施工中)</a>
+					<a href="./economy.html"><i class="twicon-taipei101"></i> 經濟起飛</a>
 				</li>
 				<li>
-					<a href="#"><i class="twicon-red-man"></i> 關於作者(施工中)</a>
+					<a href="./author.html"><i class="twicon-red-man"></i> 關於作者</a>
 				</li>
 			</ul>
 		</nav>
