--- a/Taiwan Project/industrial.html
+++ b/Taiwan Project/industrial.html
@@ -41,10 +41,10 @@
 					<a class="active" href="#"><i class="twicon-fb-stn"></i> 工業改革</a>
 				</li>
 				<li>
-					<a href="#"><i class="twicon-taipei101"></i> 經濟起飛(施工中)</a>
+					<a href="./economy.html"><i class="twicon-taipei101"></i> 經濟起飛</a>
 				</li>
 				<li>
-					<a href="#"><i class="twicon-red-man"></i> 關於作者(施工中)</a>
+					<a href="./author.html"><i class="twicon-red-man"></i> 關於作者</a>
 				</li>
 			</ul>
 		</nav>
@@ -53,49 +53,43 @@
 				<h2>台灣工業發展</h2>
 				<hr />
 				<div class="imgPicture">
-					<p>
-						<img class="pocture1" src="./picture/sailing.png" alt="sailing" />
-						航海時代
-					</p>
-					<img class="pocture1" src="./picture/arrow.png" alt="arrow" />
-					<p>
-						<img class="pocture1" src="./picture/tractor.png" alt="tractor" />
-						農業改革
-					</p>
-					<img class="pocture1" src="./picture/arrow.png" alt="arrow" />
-					<p>
-						<img class="pocture1" src="./picture/factory.png" alt="factory" />
-						工業改革
-					</p>
-					<img class="pocture1" src="./picture/arrow.png" alt="arrow" />
-					<p>
-						<img class="pocture1" src="./picture/internet.png" alt="internet" />
-						網路時代
-					</p>
+
+				<div class="boxIndustrial">
+					<div>
+						<h3>過去工業發展</h3>
+            <br>
+						<p>
+							台灣經濟史的記載與發展起自大航海時代。
+							17世紀起，台灣即因為優越戰略地點，成為西歐海權國家競相角逐的場所，不久更成為西方國家對中國、日本、南洋等地的經貿轉繼站。1630年－1945年年間，歷經臺灣荷西統治時期、明鄭時期、清治時期、日治時期的臺灣歷史，實以經濟為主軸，而該經貿經濟活動，也與台灣農業經濟有密切結合與關係。
+							另外，也涉及台灣較為特殊的土地經濟活動、地租關係。
+							經過1950年代，因國共內戰因素，從中國大陸遷徙至台灣的中華民國政府對台灣實施資本節制的土地經濟政策。在政府的適度干預與計劃下，1960年代確認的客廳即工廠經濟政策，締造了以中小企業為主的經濟方向與理念，農業出產與貿易結合的生產型態被輕工業取代。
+							從1966年－1980年，台灣財政漸趨穩健，加工出口區、十大建設、十二大建設奠定經濟快速發展的礎石。
+							1980年代後，政府主管投資和逐漸減少的國外投資引導的動態的資本主義經濟體，成為台灣經濟的主軸。中華民國政府於經濟中的角色越來越小，很多大型的國有銀行及企業逐漸私有化，這些政策，讓台灣在1975年後，平均年均經濟增長達到8%，並以出口導向獲得的資金，做為台灣工業化的保證。
+						</p>
+					</div>
+					<div>
+						<h3>現代工業發展</h3>
+            <br>
+						<p>
+							馬英九上任以來的經濟政策重點是「自由開放」與「公共建設」。
+							自由經濟與他的兩岸政策環環相連，難以輕易割離，他主張透過減緩與中國大陸間的對立，簽訂兩岸經濟相關的協議、設立自由經濟示範區，促進外國投資台灣，帶動產業發展；
+							並由政府主導「愛台十二項建設」，擴大公共投資，刺激經濟發展。
+							但是上任後隨即遭遇金融海嘯與歐債危機，他在競選期間所提出的「六三三」政見在八年任內並沒有完成。
+							而兩岸經濟政策創造的紅利集中於特定階層，反對者批評其為「買辦經濟」，分配不均的問題為人詬病
+							民進黨於2016年5月20日第二次上台執政。
+              
+              
+						</p>
+            <p>
+              此次當政的蔡英文政府，面臨著馬英九政府後期2015年連續三個季度的經濟負增長，上台後2016年至2020年連續14季成長。
+              蔡政府推動前瞻基礎建設計劃，以及5＋2創新產業計畫。
+              在蔡政府執政初期全球經濟景氣的回溫美國道瓊指數創下歷史新高，台灣經濟逐漸顯出上升跡象。
+              加上中美貿易戰使不少投資中國大陸資金轉移至台灣，促進台灣產業發展。
+              2017年5月23日開始，台股站上萬點高位達一年多，直到2018年10月11日才因美國股市大跌等因素影響跌破萬點，萬點行情持續近17個月，破歷史最長時間記錄。失業率也降至3.76%，為17年來最低。
+              但是對於中國大陸的貿易依存度，卻從馬英九時期以來先減後增，為其支持者所詬病。
+            </p>
+					</div>
 				</div>
-
-				<p>
-					台灣經濟史的記載與發展起自大航海時代。
-					17世紀起，台灣即因為優越戰略地點，成為西歐海權國家競相角逐的場所，不久更成為西方國家對中國、日本、南洋等地的經貿轉繼站。1630年－1945年年間，歷經臺灣荷西統治時期、明鄭時期、清治時期、日治時期的臺灣歷史，實以經濟為主軸，而該經貿經濟活動，也與台灣農業經濟有密切結合與關係。
-					另外，也涉及台灣較為特殊的土地經濟活動、地租關係。
-					經過1950年代，因國共內戰因素，從中國大陸遷徙至台灣的中華民國政府對台灣實施資本節制的土地經濟政策。在政府的適度干預與計劃下，1960年代確認的客廳即工廠經濟政策，締造了以中小企業為主的經濟方向與理念，農業出產與貿易結合的生產型態被輕工業取代。
-					從1966年－1980年，台灣財政漸趨穩健，加工出口區、十大建設、十二大建設奠定經濟快速發展的礎石。
-					1980年代後，政府主管投資和逐漸減少的國外投資引導的動態的資本主義經濟體，成為台灣經濟的主軸。中華民國政府於經濟中的角色越來越小，很多大型的國有銀行及企業逐漸私有化，這些政策，讓台灣在1975年後，平均年均經濟增長達到8%，並以出口導向獲得的資金，做為台灣工業化的保證。
-				</p>
-
-				<ul>
-					<li>
-						<a href="https://ic.tpex.org.tw/introduce.php?ic=D000"
-							>台灣半導體產業</a
-						>
-					</li>
-					<li>
-						<a
-							href="https://www.bnext.com.tw/article/58060/semiconductor-industry"
-							>半導體未來十年</a
-						>
-					</li>
-				</ul>
 			</section>
 		</main>
 	</body>
