--- a/index.html
+++ b/index.html
@@ -260,7 +260,9 @@
 						<div class="dropdown">
 							作品集
 							<div class="dropdown-content">
-								<a href="./Taiwan Project/index.html">Taiwan Project</a>
+								<a target="_blank" s href="./Taiwan Project/index.html"
+									>Taiwan Project</a
+								>
 								<a href="./Hawaii Project/index.html">Hawaii Project</a>
 								<a href="./Choose Restaurant/index.html">Choose Restaurant</a>
 								<a href="./Todo List/">Todo List</a>
