--- a/Hawaii Project/login.html
+++ b/Hawaii Project/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>夏威夷旅遊租借服務 | 夏威夷最方便快速的旅遊網站</title>
+		<title>會員登入 | 夏威夷最方便快速的旅遊網站</title>
 		<meta name="robots" content="index, follow" />
 		<base target="_self" />
 		<meta
@@ -31,9 +31,9 @@
 
 			<nav>
 				<ul>
-					<li><a href="#">首頁</a></li>
+					<li><a href="./index.html">首頁</a></li>
 					<li><a href="./about.html">關於我們</a></li>
-					<li><a href="./login.html">會員登入</a></li>
+					<li><a href="#">會員登入</a></li>
 					<li><a href="./contact.html">聯絡我們</a></li>
 				</ul>
 			</nav>
@@ -43,69 +43,23 @@
 			<!-- image part of the first page -->
 			<section class="backImage">
 				<div class="filter"></div>
-				<h3>
-					準備好享受夏威夷風情了嗎? <br />
-					現在準備開始
-				</h3>
-				<button class="start">現在開始</button>
-			</section>
-
-			<!-- second page -->
-			<section class="second">
-				<h2>
-					透過給予最好的品質及服務，我們幫助你獲得最好的 <br />
-					<span style="color: #318f8f"> 夏威夷旅遊經驗 </span>
-				</h2>
-
-				<section class="cards">
-					<div class="card">
-						<div class="image-container">
-							<img
-								src="./Pictures/braden-jarvis-prSogOoFmkw-unsplash.jpg"
-								alt="picture"
-							/>
+				<div class="login_box">
+					<form>
+						<span class="text-center">會員登入</span>
+						<div class="input-container">
+							<input type="text" required="" />
+							<label>account</label>
 						</div>
-						<h4>快速運送</h4>
-						<p>
-							我們承諾在一個工作天內，送達你 所訂購的物品。夏威夷群島內都是
-							用。你放心訂購，我們專業送達!
-						</p>
-						<a href="#">運送地點</a>
-					</div>
-
-					<div class="card">
-						<div class="image-container">
-							<img
-								src="./Pictures/sean-o-KMn4VEeEPR8-unsplash.jpg"
-								alt="picture"
-							/>
+						<div class="input-container">
+							<input type="password" required="" />
+							<label>password</label>
 						</div>
-						<h4>付款方便</h4>
-						<p>
-							信用卡、現金卡、現金、銀行 轉帳，以及其他熱門付款方
-							式，都可以使用。
-						</p>
-						<a href="#">了解更多</a>
-					</div>
-
-					<div class="card">
-						<div class="image-container">
-							<img
-								src="./Pictures/tatonomusic-FFCgotROOTY-unsplash.jpg"
-								alt="picture"
-							/>
-						</div>
-						<h4>種類多樣</h4>
-						<p>
-							超過3000樣商品都可租借， 商品均通過品質篩檢，保證您
-							到的商品絕對滿意。
-						</p>
-						<a href="#">線上搜尋</a>
-					</div>
-				</section>
+						<button type="button" class="btn">submit</button>
+					</form>
+				</div>
 			</section>
 		</main>
-		<!-- third page -->
+
 		<footer>
 			<div class="logo">
 				<img src="./Icons/black logo.svg" alt="Loge" />
@@ -114,9 +68,9 @@
 
 			<nav>
 				<ul>
-					<li><a href="#">Home</a></li>
+					<li><a href="./index.html">Home</a></li>
 					<li><a href="./about.html">About</a></li>
-					<li><a href="./login.html">Login</a></li>
+					<li><a href="#">Login</a></li>
 					<li><a href="./contact.html">Contact</a></li>
 				</ul>
 			</nav>
