--- a/Taiwan Project/industrial.html
+++ b/Taiwan Project/industrial.html
@@ -27,37 +27,41 @@
 				<i class="twicon-main-island"></i>台灣發展歷史網頁
 			</h1>
 			<h3 class="heardText">過去70年台灣經濟發展歷史及相關政策</h3>
+			<!-- 導覽列 -->
+			<nav>
+				<ul>
+					<li>
+						<a href="./index.html"><i class="twicon-main-island"></i> 首頁</a>
+					</li>
+					<li>
+						<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
+					</li>
+					<li>
+						<a class="active" href="#"
+							><i class="twicon-fb-stn"></i> 工業改革</a
+						>
+					</li>
+					<li>
+						<a href="./economy.html"
+							><i class="twicon-taipei101"></i> 經濟起飛</a
+						>
+					</li>
+					<li>
+						<a href="./author.html"><i class="twicon-red-man"></i> 關於作者</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
-		<!-- 導覽列 -->
-		<nav>
-			<ul>
-				<li>
-					<a href="./index.html"><i class="twicon-main-island"></i> 首頁</a>
-				</li>
-				<li>
-					<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
-				</li>
-				<li>
-					<a class="active" href="#"><i class="twicon-fb-stn"></i> 工業改革</a>
-				</li>
-				<li>
-					<a href="./economy.html"><i class="twicon-taipei101"></i> 經濟起飛</a>
-				</li>
-				<li>
-					<a href="./author.html"><i class="twicon-red-man"></i> 關於作者</a>
-				</li>
-			</ul>
-		</nav>
+
 		<main>
 			<section class="industrial">
 				<h2>台灣工業發展</h2>
 				<hr />
-				<div class="imgPicture">
 
 				<div class="boxIndustrial">
 					<div>
 						<h3>過去工業發展</h3>
-            <br>
+						<br />
 						<p>
 							台灣經濟史的記載與發展起自大航海時代。
 							17世紀起，台灣即因為優越戰略地點，成為西歐海權國家競相角逐的場所，不久更成為西方國家對中國、日本、南洋等地的經貿轉繼站。1630年－1945年年間，歷經臺灣荷西統治時期、明鄭時期、清治時期、日治時期的臺灣歷史，實以經濟為主軸，而該經貿經濟活動，也與台灣農業經濟有密切結合與關係。
@@ -69,7 +73,7 @@
 					</div>
 					<div>
 						<h3>現代工業發展</h3>
-            <br>
+						<br />
 						<p>
 							馬英九上任以來的經濟政策重點是「自由開放」與「公共建設」。
 							自由經濟與他的兩岸政策環環相連，難以輕易割離，他主張透過減緩與中國大陸間的對立，簽訂兩岸經濟相關的協議、設立自由經濟示範區，促進外國投資台灣，帶動產業發展；
@@ -77,20 +81,19 @@
 							但是上任後隨即遭遇金融海嘯與歐債危機，他在競選期間所提出的「六三三」政見在八年任內並沒有完成。
 							而兩岸經濟政策創造的紅利集中於特定階層，反對者批評其為「買辦經濟」，分配不均的問題為人詬病
 							民進黨於2016年5月20日第二次上台執政。
-              
-              
 						</p>
-            <p>
-              此次當政的蔡英文政府，面臨著馬英九政府後期2015年連續三個季度的經濟負增長，上台後2016年至2020年連續14季成長。
-              蔡政府推動前瞻基礎建設計劃，以及5＋2創新產業計畫。
-              在蔡政府執政初期全球經濟景氣的回溫美國道瓊指數創下歷史新高，台灣經濟逐漸顯出上升跡象。
-              加上中美貿易戰使不少投資中國大陸資金轉移至台灣，促進台灣產業發展。
-              2017年5月23日開始，台股站上萬點高位達一年多，直到2018年10月11日才因美國股市大跌等因素影響跌破萬點，萬點行情持續近17個月，破歷史最長時間記錄。失業率也降至3.76%，為17年來最低。
-              但是對於中國大陸的貿易依存度，卻從馬英九時期以來先減後增，為其支持者所詬病。
-            </p>
+						<p>
+							此次當政的蔡英文政府，面臨著馬英九政府後期2015年連續三個季度的經濟負增長，上台後2016年至2020年連續14季成長。
+							蔡政府推動前瞻基礎建設計劃，以及5＋2創新產業計畫。
+							在蔡政府執政初期全球經濟景氣的回溫美國道瓊指數創下歷史新高，台灣經濟逐漸顯出上升跡象。
+							加上中美貿易戰使不少投資中國大陸資金轉移至台灣，促進台灣產業發展。
+							2017年5月23日開始，台股站上萬點高位達一年多，直到2018年10月11日才因美國股市大跌等因素影響跌破萬點，萬點行情持續近17個月，破歷史最長時間記錄。失業率也降至3.76%，為17年來最低。
+							但是對於中國大陸的貿易依存度，卻從馬英九時期以來先減後增，為其支持者所詬病。
+						</p>
 					</div>
 				</div>
 			</section>
 		</main>
 	</body>
+	<script src="./app.js"></script>
 </html>
