--- a/Taiwan Project/author.html
+++ b/Taiwan Project/author.html
@@ -27,27 +27,33 @@
 				<i class="twicon-main-island"></i>台灣發展歷史網頁
 			</h1>
 			<h3 class="heardText">過去70年台灣經濟發展歷史及相關政策</h3>
+			<!-- 導覽列 -->
+			<nav>
+				<ul>
+					<li>
+						<a href="./index.html"><i class="twicon-main-island"></i> 首頁</a>
+					</li>
+					<li>
+						<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
+					</li>
+					<li>
+						<a href="./industrial.html"
+							><i class="twicon-fb-stn"></i> 工業改革</a
+						>
+					</li>
+					<li>
+						<a href="./economy.html"
+							><i class="twicon-taipei101"></i> 經濟起飛</a
+						>
+					</li>
+					<li>
+						<a class="active" href="#"
+							><i class="twicon-red-man"></i> 關於作者</a
+						>
+					</li>
+				</ul>
+			</nav>
 		</header>
-		<!-- 導覽列 -->
-		<nav>
-			<ul>
-				<li>
-					<a href="./index.html"><i class="twicon-main-island"></i> 首頁</a>
-				</li>
-				<li>
-					<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
-				</li>
-				<li>
-					<a href="./industrial.html"><i class="twicon-fb-stn"></i> 工業改革</a>
-				</li>
-				<li>
-					<a href="./economy.html"><i class="twicon-taipei101"></i> 經濟起飛</a>
-				</li>
-				<li>
-					<a class="active" href="#"><i class="twicon-red-man"></i> 關於作者</a>
-				</li>
-			</ul>
-		</nav>
 
 		<main>
 			<section class="author">
@@ -87,4 +93,5 @@
 			</section>
 		</main>
 	</body>
+	<script src="./app.js"></script>
 </html>
