--- a/Taiwan Project/index.html
+++ b/Taiwan Project/index.html
@@ -31,27 +31,33 @@
 				<i class="twicon-main-island"></i>台灣發展歷史網頁
 			</h1>
 			<h3 class="heardText">過去70年台灣經濟發展歷史及相關政策</h3>
+			<!-- 導覽列 -->
+			<nav>
+				<ul>
+					<li>
+						<a class="active" href="#"
+							><i class="twicon-main-island"></i> 首頁</a
+						>
+					</li>
+					<li>
+						<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
+					</li>
+					<li>
+						<a href="./industrial.html"
+							><i class="twicon-fb-stn"></i> 工業改革</a
+						>
+					</li>
+					<li>
+						<a href="./economy.html"
+							><i class="twicon-taipei101"></i> 經濟起飛</a
+						>
+					</li>
+					<li>
+						<a href="./author.html"><i class="twicon-red-man"></i> 關於作者</a>
+					</li>
+				</ul>
+			</nav>
 		</header>
-		<!-- 導覽列 -->
-		<nav>
-			<ul>
-				<li>
-					<a class="active" href="#"><i class="twicon-main-island"></i> 首頁</a>
-				</li>
-				<li>
-					<a href="./farming.html"><i class="twicon-l-wemo"></i> 農業改革</a>
-				</li>
-				<li>
-					<a href="./industrial.html"><i class="twicon-fb-stn"></i> 工業改革</a>
-				</li>
-				<li>
-					<a href="./economy.html"><i class="twicon-taipei101"></i> 經濟起飛</a>
-				</li>
-				<li>
-					<a href="./author.html"><i class="twicon-red-man"></i> 關於作者</a>
-				</li>
-			</ul>
-		</nav>
 
 		<!-- 主要內容 -->
 		<main>
